--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Zhufei Chu's Personnal Homepage
 ---
 
 		<div class="blurb">
-			<h1>Hi there, I'm Hank Quinlan!</h1>
-			<p>I'm best known as the horrible cop from <em>A Touch of Evil</em>. Don't trust me. <a href="/about">Read more about my life...</a></p>
+			<h1>I am trying to construct my homepage<h1>
+			<p>
+      I'm best known as the horrible cop from <em>A Touch of Evil</em>. Don't trust me. <a href="/about">Read more about my life...</a></p>
 		</div> 
