--- a/index.html
+++ b/index.html
@@ -5,6 +5,5 @@ title: Zhufei Chu's Personnal Homepage
 
 		<div class="blurb">
 			<h1>I am trying to construct my homepage<h1>
-			<p>
-      I'm best known as the horrible cop from <em>A Touch of Evil</em>. Don't trust me. <a href="/about">Read more about my life...</a></p>
+			<p>I'm best known as the horrible cop from <em>A Touch of Evil</em>. Don't trust me. <a href="/about">Read more about my life...</a></p>
 		</div> 
