--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ title: Zhufei Chu's Homepage
 ---
 
 		<div class="blurb">
-			<h1>Hi there, I'm Zhufei Chu!</h1>
-			<p>I'm best known as the horrible cop from <em>A Touch of Evil</em>. Don't trust me. <a href="/about">Read more about my life...</a></p>
+			<h1>Dr. Zhufei Chu</h1>
+			<p>received the B.S. degree in electronic information science and technology from Shandong University, Weihai, China, in 2008 and the M.S. degree in communication and information system from Ningbo University, Ningbo, China, in 2011, and the Ph.D. degree in the same subject, in 2014. Now, he is a lecturer at Ningbo University. His research interests include electronics design automation (EDA), low power SoC physical design, and finite state machine state assignment. He is a member of the IEEE and IEICE.
+       He has published over 20 peer-reviewed technique papers, including IEEE Trans. on Nanotechnology, Integration, the VLSI Journal, etc. </a></p>
 		</div> 
+
