--- a/cv/index.html
+++ b/cv/index.html
@@ -5,16 +5,16 @@ title: CV of Your Name
 
 	<div class="cv">
 		<a href="#" class="download" title="Download CV as PDF">Download CV</a>			
-					<h1>Hank Quinlan</h1>
+					<h1>Zhufei Chu</h1>
 					<address>
 					<strong>Affiliation</strong><br>
 					Street Address<br>
 					City State 12345<br>
 					<abbr title="phone">P:</abbr> (123) 456-7890<br>
-					<span class="obfuscate">youremailaddress@email.com</span>
+					<span class="obfuscate">zhufei.chu@epfl.ch</span>
 					</address>
 
-					<h2>Select Publications</h2>
+					<h2>Publications</h2>
 
 					<p><strong>Last Name, F.</strong> (204). Title of a Chapter You Wrote for a Book. In I.M Editor (Ed.), <em>The Book I Contributed To</em> (pp. 97-108). City, ST: Publisher Name. Chapter available at: <a href="#">http://permalink</a>.
 
