--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=GB2312" />
 
 		
 		<link id="wsite-base-style" rel="stylesheet" type="text/css" href="//cdn2.editmysite.com/css/sites.css?buildTime=1480717604" />
