--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Zhufei Chu's Personal Homepage - Home</title><meta property="og:site_name" content="Zhufei Chu&#039;s Personal Homepage" />
 <meta property="og:title" content="Zhufei Chu&#039;s Personal Homepage" />
 <meta property="og:description" content="Zhu-Fei Chu received the B.S. degree in electronic information science and technology from Shandong University, Weihai, China, in 2008 and the M.S. degree in communication and information system from..." />
-<meta property="og:image" content="1*8.jpg" />
+<meta property="og:image" content="chu.jpg" />
 <meta property="og:image" content="http://www2.clustrmaps.com/stats/maps-no_clusters/chuzhufei.weebly.com--thumb.jpg" />
 <meta property="og:image" content="http://cc.amazingcounters.com/counter.php?i=3149878&c=9449947" />
 <meta property="og:url" content="http://chuzhufei.weebly.com/" />
