--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta property="og:image" content="chu.jpg" />
 <meta property="og:image" content="http://www2.clustrmaps.com/stats/maps-no_clusters/chuzhufei.weebly.com--thumb.jpg" />
 <meta property="og:image" content="http://cc.amazingcounters.com/counter.php?i=3149878&c=9449947" />
-<meta property="og:url" content="http://chuzhufei.weebly.com/" />
+<meta property="og:url" content="http://zfchu.github.io/" />
 
 
 
@@ -173,7 +173,7 @@ var STYLE_PREFIX = 'wsite';
 	<span class='imgPusher' style='float:left;height:0px'></span><span
     style='display:
     table;width:auto;position:relative;float:left;max-width:100%;;clear:left;margin-top:0px;*margin-top:0px'><a
-                                                                     href='/uploads/2/3/3/2/23328120/6312141_orig.jpg?123'
+                                                                     href='chu.jpg'
                                                                      rel='lightbox'
                                                                      onclick='if
                                                                      (!lightboxLoaded)
