--- a/index.html
+++ b/index.html
@@ -179,7 +179,15 @@ var STYLE_PREFIX = 'wsite';
                                                                      (!lightboxLoaded)
                                                                      return
                                                                      false'><img
-                                                                     src="chu.jpg" style="margin-top: 5px; margin-bottom: 10px; margin-left: 0px; margin-right: 10px; border-width:1px;padding:3px; max-width:100%" alt="Picture" class="galleryImageBorder wsite-image" /></a><span style="display: table-caption; caption-side: bottom; font-size: 90%; margin-top: -10px; margin-bottom: 10px; text-align: center;" class="wsite-caption"></span></span>
+                                                                     src="chu.jpg"
+                                                                     style="margin-top:
+                                                                 0px;
+                                                                 margin-bottom:
+                                                             0px;
+                                                             margin-left:
+                                                         0px;
+                                                         margin-right:
+                                                     0px; border-width:1px;padding:3px; max-width:100%" alt="Picture" class="galleryImageBorder wsite-image" /></a><span style="display: table-caption; caption-side: bottom; font-size: 90%; margin-top: -10px; margin-bottom: 10px; text-align: center;" class="wsite-caption"></span></span>
 <div class="paragraph" style="text-align:justify;display:block;"><strong>Zhu-Fei Chu</strong> received the B.S. degree in electronic information science and technology from Shandong University, Weihai, China, in 2008 and the M.S. degree in communication and information system from Ningbo University, Ningbo, China, in 2011, and the Ph.D. degree in the same subject, in 2014. Now, he is a lecturer at Ningbo University. His research interests include electronics design automation (EDA), low power SoC physical design, and finite state machine state assignment. He is a student member of the IEEE and IEICE.<br />&nbsp; &nbsp; &nbsp; &nbsp;He has published over 20 peer-reviewed technique papers, including <strong>IEEE Trans. on Nanotechnology</strong>, <strong>Integration, the VLSI Journal, etc</strong>.&nbsp;</div>
 <hr style="width:100%;clear:both;visibility:hidden;"></hr>
 
