--- a/index.html
+++ b/index.html
@@ -23,11 +23,22 @@
 [<a href="#links">Links</a>]
 [<a href="#address">Address</a>]
 </h4>
-E-mail: chuzhufei@nbu.edu.cn
+
+<a href="mailto:chuzhufei@nbu.edu.cn">E-Mail: <b>chuzhufei@nbu.edu.cn</b></a> <br>
+Phone:(+86 574)8760-9496<br>
 
 <br>
 <strong>Research Interests:</strong><br>
 Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
+</td>
+
+</td>
+<td width=200>
+</td>
+
+<td>
+	<td width=350>
+		<img src="images/nbu.jpg" width=320> 
 </td>
 </table>
 
@@ -37,7 +48,7 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 
 <UL>
 	<li> 15/02/2017, Paper "Improving Circuit Mapping Performance Through MIG-based Synthesis for Carry Chains" has been accepted by publication by GLSVLSI' 17</li>
-    <li> 27/06/2016, Now as a visiting scholar @ EPFL (2016.06-2017.06) Lausanne, Switzerland in the group of <A HREF="http://si2.epfl.ch/~demichel/">Prof. Giovanni De Micheli​</a></li>
+    <li> 27/06/2016, Now as a researcher @ EPFL (2016.06-2017.06) Lausanne, Switzerland in the group of <A HREF="http://si2.epfl.ch/~demichel/">Prof. Giovanni De Micheli​</a></li>
 </UL>
 
 <HR>
@@ -45,57 +56,56 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 <h2> <a name="about">About me</a> </h2>
 
 <UL>
-	Zhufei Chu received the B.S. degree in electronic information science and technology from Shandong University, Weihai, China, in 2008 and the M.S. degree in communication and information system from Ningbo University, Ningbo, China, in 2011, and the Ph.D. degree in the same subject, in 2014. Now, he is a lecturer at Ningbo University. During 2016 to 2017, he works as a researcher at the <A HREF="http://lsi.epfl.ch/"> Integrated Systems Laboratory</a> at EPFL, Lausanne, Switzerland in the group of Giovanni De Micheli.
+	<strong>Zhufei Chu</strong>, born on Oct. 24th, 1986, received the B.S. degree in electronic information science and technology from <a href="http://www.wh.sdu.edu.cn/">Shandong University, Weihai </a>, China, in 2008 and the M.S. degree in communication and information system from <a href="www.nbu.edu.cn">Ningbo University, Ningbo</a>, China, in 2011, and the Ph.D. degree in the same subject, in 2014. Now, he is a lecturer at Ningbo University. During 2016 to 2017, he works as a researcher at the <A HREF="http://lsi.epfl.ch/"> Integrated Systems Laboratory</a> at EPFL, Lausanne, Switzerland in the group of <A HREF="http://si2.epfl.ch/~demichel/">Prof. Giovanni De Micheli​</a>.
 </UL>	
 
-<h2> <a name="publications">Publications</a> </h2>
+<h2> <a name="publications">Publications <a href="https://scholar.google.com/citations?hl=en&user=0spez40AAAAJ&view_op=list_works&gmla=AJsN-F7L0_K-NorY6eoZe8Pw5s7fVCiAq78gP2ooH9ToyokXmHtZMdOpLqZcA1SdxYMErXBK7c3ojrJANocYOruEoCCtFhL_X66ox6BQu7pD55qOLBSKisIgW6UyODbwLeEAWXk-sFtfYo8WCNcAkyazMLZ_JKn6yQ"> [Google Scholar]</a> <a href="http://dblp.uni-trier.de/pers/hd/c/Chu:Zhufei"> [DBLP] </a></a> </h2>
 <p>
 <OL>
 <h3> 2017 </h3>
-<h4> Conference Publications </h4>
-
-<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Xifan Tang, Mathias Soeken, Ana Petkovska, Grace Zgheib, Luca Amaru, Yinshui Xia, Paolo Ienne, Giovanni De Micheli and Pierre-Emmanuel Gaillardon, "Improving Circuit Mapping Performance Through MIG-based Synthesis for Carry Chains", GLSVLSI' 17, <i>ACM Great Lakes Symposium on VLSI</i>, May 2017, Banff, Alberta, Canada.
+<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Xifan Tang, Mathias Soeken, Ana Petkovska, Grace Zgheib, Luca Amaru, Yinshui Xia, Paolo Ienne, Giovanni De Micheli and Pierre-Emmanuel Gaillardon, "Improving Circuit Mapping Performance Through MIG-based Synthesis for Carry Chains", <strong>GLSVLSI' 17</strong>, <i>ACM Great Lakes Symposium on VLSI</i>, May 2017, Banff, Alberta, Canada.
 </li>
 
-<h4> Journal Publications </h4>
 <li>
 	Jibo Wang, Yinshui Xia, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, and Lunyao Wang, "Fast Cells Defect-Tolerant Mapping Based on Gate Node Interval Selection in CMOL Circuits", <i> Journal of Computer-Aided Design and Computer graphics</i>, 29(1):172-179, Jan 2017. (in Chinese)
 </li>
 
 <h3> 2016 </h3>
-<h4> Journal Publications </h4>
-<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia, Lunyao Wang and Jian Wang, "Efficient power pad assignment for multi-voltage SoC and its application in floorplanning", <i>International Journal of Circuit Theory and Applications</i>, 44(8): 1533–1550, 2016.</li>
+<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia, Lunyao Wang and Jian Wang, "<a href="http://onlinelibrary.wiley.com/doi/10.1002/cta.2178/full"> Efficient power pad assignment for multi-voltage SoC and its application in floorplanning</a>", <i>International Journal of Circuit Theory and Applications</i>, 44(8): 1533–1550, 2016.</li>
 	
-<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia and Lunyao Wang, "Multi-supply voltage (MSV) driven SoC floorplanning for fast design convergence", <i>Integration, the VLSI Journal</i>, 52:335-346, Jan 2016.</li>
+<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia and Lunyao Wang, "<a href="http://www.sciencedirect.com/science/article/pii/S0167926015001170"> Multi-supply voltage (MSV) driven SoC floorplanning for fast design convergence </a>", <i>Integration, the VLSI Journal</i>, 52:335-346, Jan 2016.</li>
 
 
 <h3> 2014 </h3>
-<h4> Conference Publications </h4>
-<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia, Lunyao Wang, "Level shifter planning for timing constrained multi-voltage SoC floorplanning", GLSVLSI' 14, <i>ACM Great Lakes Symposium on VLSI</i>, May 2014, Houston, USA, pp.329-334.</li>
-
-<h4> Journal Publications </h4>
-<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia, Lunyao Wang and Jian Wang, "Efficient nonrectangular shaped voltage island aware floorplanning with nonrandomized searching engine", <i>Microelectronics Journal</i>, 45(4):382-393, Apr. 2014. </li>
+<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia, Lunyao Wang and Jian Wang, "<a href="http://www.sciencedirect.com/science/article/pii/S002626921400007X">Efficient nonrectangular shaped voltage island aware floorplanning with nonrandomized searching engine</a>", <i>Microelectronics Journal</i>, 45(4):382-393, Apr. 2014. </li>
 
 <li> <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia, Lunyao Wang, and Jun Zhai "Wire-bonding Power Pad Assignment and Power Mesh Topological Optimization for Multiple Voltage SoC", <i> Journal of Computer-Aided Design and Computer graphics</i>, 26(9):1501-1508, Sep 2014. </li>
+	
+<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia, Lunyao Wang, "<a href="http://dl.acm.org/citation.cfm?id=2591587"> Level shifter planning for timing constrained multi-voltage SoC floorplanning </a>", <strong>GLSVLSI' 14</strong>, <i>ACM Great Lakes Symposium on VLSI</i>, May 2014, Houston, USA, pp.329-334.</li>
+
+
 
 <h3> Before 2014 </h3>
-<h4> Conference Publications </h4>
-<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia, Lunyao Wang and Jian Wang, "Voltage drop aware power pad assignment and floorplanning for multi-voltage SoC designs", <i>13th International Conference on Computer-Aided Design and Computer Graphics (CAD/Graphics 2013)</i>, Nov. 2013, Hongkong, pp. 87-94. </li>
+
+<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia，William N. N. Hung, Xiaoyu Song and Lunyao Wang, “<a href="http://www.tandfonline.com/doi/abs/10.1080/00207217.2012.720945"> Timing-driven logic restructuring for nano-hybrid circuits </a>”, International Journal of Electronics, 100(5):669-685, May 2013.</li>
+
+<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia and Lunyao Wang, “<a href="https://link.springer.com/article/10.1007/s11390-012-1210-7">Cell mapping for nanohybrid circuit architecture using genetic algorithm</a>”，Journal of Computer Science and Technology, 27(1):113-120, Jan. 2012. </li>
+
+<li>Yinshui Xia, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, William N. N. Hung, Lunyao Wang and Xiaoyu Song, “<a href="http://ieeexplore.ieee.org/document/5738347/">An integrated optimization approach for nanohybrid circuit cell mapping </a>”，IEEE Transactions on Nanotechnology, 10(6):1275-1284, Nov. 2011. </li>
+
+<li>Lunyao Wang, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, and Yinshui Xia, "<a href="https://link.springer.com/article/10.1007/s11390-013-1397-2">Low power state assignment algorithm for FSMs considering peak current optimization</a>", Journal of Computer Science and Technology, 28(6):1054-1062, Nov. 2013. </li>	
+
+<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia, Lunyao Wang and Jian Wang, "Voltage drop aware power pad assignment and floorplanning for multi-voltage SoC designs", <i>13th International Conference on Computer-Aided Design and Computer Graphics (<strong>CAD/Graphics 2013</strong>)</i>, Nov. 2013, Hongkong, pp. 87-94. </li>
 	
-<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia, William N. N. Hung, Lunyao Wang and Xiaoyu Song , “A memetic approach for nanoscale circuit cell mapping”，<i>13th EUROMICRO Conference on Digital System Design (DSD 2010)</i>, Sep. 2010, Lille, France. </li>
+<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia, William N. N. Hung, Lunyao Wang and Xiaoyu Song , “A memetic approach for nanoscale circuit cell mapping”，<i>13th EUROMICRO Conference on Digital System Design (<strong>DSD 2010</strong>)</i>, Sep. 2010, Lille, France. </li>
 	
-<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia, Lunyao Wang and Meiqun Hu, “CMOL cell assignment based on dynamic interchange”，<i>Proceedings 2009 8th IEEE International Conference on ASIC (ASICON 2009)</i>，Oct. 2009, Changsha, China. </li>
+<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia, Lunyao Wang and Meiqun Hu, “CMOL cell assignment based on dynamic interchange”，<i>Proceedings 2009 8th IEEE International Conference on ASIC (<strong>ASICON 2009</strong>)</i>，Oct. 2009, Changsha, China. </li>
 	
-<li> Yinshui Xia, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, William N. N. Hung, Lunyao Wang and Xiaoyu Song, “CMOL cell assignment by genetic algorithm”，<i>8th IEEE NEWCAS Conference (NEWCAS 2010)</i>，Jun. 2010, Montreal, Canada. </li>
+<li> Yinshui Xia, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, William N. N. Hung, Lunyao Wang and Xiaoyu Song, “CMOL cell assignment by genetic algorithm”，<i>8th IEEE NEWCAS Conference (<strong>NEWCAS 2010</strong>)</i>，Jun. 2010, Montreal, Canada. </li>
+	
+<li>Zhufei Chu, Yinshui Xia and Lunyao Wang, "Fast mapping of Nano/CMOS cells", <i> Journal of Computer-Aided Design and Computer graphics</i>, 23(3):514-520, Mar 2011.</li>
 
-<h4> Journal Publications </h4>
-<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia，William N. N. Hung, Xiaoyu Song and Lunyao Wang, “Timing-driven logic restructuring for nano-hybrid circuits”, International Journal of Electronics, 100(5):669-685, May 2013.</li>
-
-<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia and Lunyao Wang, “Cell mapping for nanohybrid circuit architecture using genetic algorithm”，Journal of Computer Science and Technology, 27(1):113-120, Jan. 2012. </li>
-
-<li>Yinshui Xia, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, William N. N. Hung, Lunyao Wang and Xiaoyu Song, “An integrated optimization approach for nanohybrid circuit cell mapping”，IEEE Transactions on Nanotechnology, 10(6):1275-1284, Nov. 2011. </li>
-
-<li>Lunyao Wang, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, and Yinshui Xia, "Low power state assignment algorithm for FSMs considering peak current optimization", Journal of Computer Science and Technology, 28(6):1054-1062, Nov. 2013. </li>	
+<li>Yinshui Xia, Zhufei Chu, Lunyao Wang, William N N Hung and Xiaoyu Song, "Logic Equivalent Transformation for Nano-meter CMOS Hybrid Circuits", <i> Journal of Electronics and Information Technology</i>, 33(7):1733-1737, July 2011.</li>
 </OL>
 <HR>
 
@@ -103,17 +113,27 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 <ul> 
 <li><a href="http://www.cse.chalmers.se/research/group/vlsi/conference/">VLSI Conference Table</a>
 </li>
-<li><a href="https://scholar.google.com/citations?hl=en&user=0spez40AAAAJ&view_op=list_works&gmla=AJsN-F7L0_K-NorY6eoZe8Pw5s7fVCiAq78gP2ooH9ToyokXmHtZMdOpLqZcA1SdxYMErXBK7c3ojrJANocYOruEoCCtFhL_X66ox6BQu7pD55qOLBSKisIgW6UyODbwLeEAWXk-sFtfYo8WCNcAkyazMLZ_JKn6yQ">Google Scholar</a></li>
-<li><a href="http://dblp.uni-trier.de/pers/hd/c/Chu:Zhufei">DBLP</a></li>
+
 </ul>
 <HR>
 
-<HR>
+<table border=0 cellspacing=5>
+<td width=500>
 <h2><a name="address">Address</a></h2>	
-Caoguangbiao Building, Room 411 <br>
+Fenghua Road 818, Jiangbei, Ningbo, 315211<br>
 Faculty of Electrical Engineering and Computer Science (EECS)<br>
-Ningbo Univeristy, Zhejiang, 315211, China
-	<HR>
+Ningbo Univeristy, Zhejiang, China
+</td>
+
+<td>
+	<td width = 500>
+</td>
+
+<td>
+	<td width = 300>
+		<img src="images/cise.jpg" width=280>
+</td>
+
 
 </BODY>
 </HTML>
