--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@ Ningbo Univeristy, Zhejiang, China
 
 <td>
 	<td width = 500>
+		<a title="Web Statistics" href="http://clicky.com/101044197"><img alt="Web Statistics" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+		<script src="//static.getclicky.com/js" type="text/javascript"></script>
+		<script type="text/javascript">try{ clicky.init(101044197); }catch(e){}</script>
+		<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101044197ns.gif" /></p></noscript>
 </td>
 
 <td>
