--- a/index.html
+++ b/index.html
@@ -65,11 +65,18 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 <OL>
 <h3> 2017 </h3>
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Mathias Soeken, Yinshui
-  Xia and  Giovanni De Micheli, "Functional Decomposition Using Majority",
+  Xia and  Giovanni De Micheli, "<A
+    HREF="http://www.iwls.org/iwls2017/program.php">Functional Decomposition
+    Using Majority</a>",
   <strong>IWLS' 17</strong>, <i>International Wokrshop on Logic & Synthesis</i>, June 2017, Austin, TX, USA.
 </li>
 
-<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Xifan Tang, Mathias Soeken, Ana Petkovska, Grace Zgheib, Luca Amaru, Yinshui Xia, Paolo Ienne, Giovanni De Micheli and Pierre-Emmanuel Gaillardon, "Improving Circuit Mapping Performance Through MIG-based Synthesis for Carry Chains", <strong>GLSVLSI' 17</strong>, <i>ACM Great Lakes Symposium on VLSI</i>, May 2017, Banff, Alberta, Canada.
+<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Xifan Tang, Mathias
+  Soeken, Ana Petkovska, Grace Zgheib, Luca Amaru, Yinshui Xia, Paolo Ienne,
+  Giovanni De Micheli and Pierre-Emmanuel Gaillardon, "<A
+       HREF="http://dl.acm.org/citation.cfm?id=3060432&CFID=765266662&CFTOKEN=93643535">Improving
+       Circuit Mapping Performance Through MIG-based Synthesis for Carry
+       Chains</a>", <strong>GLSVLSI' 17</strong>, <i>ACM Great Lakes Symposium on VLSI</i>, May 2017, Banff, Alberta, Canada.
 </li>
 
 <li>
