--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 <h2> <a name="about">About me</a> </h2>
 
 <UL>
-	<strong>Zhufei Chu</strong>, born on Oct. 24th, 1986, received the B.S. degree in electronic information science and technology from <a href="http://www.wh.sdu.edu.cn/">Shandong University, Weihai </a>, China, in 2008 and the M.S. degree in communication and information system from <a href="www.nbu.edu.cn">Ningbo University, Ningbo</a>, China, in 2011, and the Ph.D. degree in the same subject, in 2014. Now, he is a lecturer at Ningbo University. During 2016 to 2017, he works as a researcher at the <A HREF="http://lsi.epfl.ch/"> Integrated Systems Laboratory</a> at EPFL, Lausanne, Switzerland in the group of <A HREF="http://si2.epfl.ch/~demichel/">Prof. Giovanni De Micheli​</a>.
+	<strong>Zhufei Chu</strong>, born on Oct. 24th, 1986, received the B.S.
+  degree in electronic information science and technology from <a
+  href="http://www.wh.sdu.edu.cn/">Shandong University, Weihai </a>, China, in
+2008 and the M.S. degree in communication and information system from <a
+  href="http://www.nbu.edu.cn/">Ningbo University, Ningbo</a>, China, in 2011, and the Ph.D. degree in the same subject, in 2014. Now, he is a lecturer at Ningbo University. During 2016 to 2017, he works as a researcher at the <A HREF="http://lsi.epfl.ch/"> Integrated Systems Laboratory</a> at EPFL, Lausanne, Switzerland in the group of <A HREF="http://si2.epfl.ch/~demichel/">Prof. Giovanni De Micheli​</a>.
 </UL>	
 <HR>
 	
