--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 
 <h2><a name="links">Links</a></h2>
 <ul> 
-<li><a href="http://www.cse.chalmers.se/research/group/vlsi/conference/">VLSI Conference Table</a>
+<li><a href="http://www.cse.chalmers.se/research/group/vlsi/conference/">VLSI
+    Conference Table</a>, <a href="http://www.ieee-ceda.org/">CEDA</a>, 
+  <a href="http://ieeexplore.ieee.org/Xplore/dynhome.jsp">Xplore</a>
 </li>
 
 </ul>
