--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 <h2> <a name="news">Recent News</a> </h2>
 
 <UL>
+	<li> 11/09/2017, Paper "Functional Decomposition using Majority" has been
+    accepted by publication by ASPDAC' 18</li>
 	<li> 15/02/2017, Paper "Improving Circuit Mapping Performance Through MIG-based Synthesis for Carry Chains" has been accepted by publication by GLSVLSI' 17</li>
     <li> 27/06/2016, Now as a researcher @ EPFL (2016.06-2017.06) Lausanne, Switzerland in the group of <A HREF="http://si2.epfl.ch/~demichel/">Prof. Giovanni De Micheli​</a></li>
 </UL>
@@ -67,6 +69,14 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 <h2> <a name="publications">Publications <a href="https://scholar.google.com/citations?hl=en&user=0spez40AAAAJ&view_op=list_works&gmla=AJsN-F7L0_K-NorY6eoZe8Pw5s7fVCiAq78gP2ooH9ToyokXmHtZMdOpLqZcA1SdxYMErXBK7c3ojrJANocYOruEoCCtFhL_X66ox6BQu7pD55qOLBSKisIgW6UyODbwLeEAWXk-sFtfYo8WCNcAkyazMLZ_JKn6yQ"> [Google Scholar]</a> <a href="http://dblp.uni-trier.de/pers/hd/c/Chu:Zhufei"> [DBLP] </a></a> </h2>
 <p>
 <OL>
+<h3> 2018 </h3>
+<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Mathias Soeken, Yinshui
+  Xia and  Giovanni De Micheli, "<A
+    HREF="http://aspdac.kaist.ac.kr/">Functional Decomposition
+    Using Majority</a>",
+  <strong>ASPDAC' 18</strong>, <i>Asia and South Pacific Design Automation
+    Conference</i>, Jan 2018, Jeju Island, Korea.
+</li>
 <h3> 2017 </h3>
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Mathias Soeken, Yinshui
   Xia and  Giovanni De Micheli, "<A
