--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <img src="images/chu.jpg" width=120>
 </td>
 <td width=600>
-<h1>Zhufei Chu, Lecturer, Ningbo Univ.</h1>
+<h1>Zhufei Chu, Associate Professor, Ningbo Univ.</h1>
 <h4>
 [<a href="#news">Recent News</a>]
 [<a href="#about">About me</a>]
@@ -47,6 +47,7 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 <h2> <a name="news">Recent News</a> </h2>
 
 <UL>
+  <li> 12/12/2017, Dr. Chu has been appointed as Associate Professor at Ningbo University. </li>
 	<li> 11/09/2017, Paper "Functional Decomposition using Majority" has been
     accepted by publication by ASPDAC' 18</li>
 	<li> 15/02/2017, Paper "Improving Circuit Mapping Performance Through MIG-based Synthesis for Carry Chains" has been accepted by publication by GLSVLSI' 17</li>
