--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ During 2016 to 2017, he works as a researcher at the <A HREF="http://lsi.epfl.ch
 <h3> 2018 </h3>
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Mathias Soeken, Yinshui
   Xia and  Giovanni De Micheli, "<A
-    HREF="http://aspdac.kaist.ac.kr/">Functional Decomposition
+    HREF="http://ieeexplore.ieee.org/document/8297400/>Functional Decomposition
     Using Majority</a>",
   <strong>ASPDAC' 18</strong>, <i>Asia and South Pacific Design Automation
     Conference</i>, Jan 2018, Jeju Island, Korea.
