--- a/index.html
+++ b/index.html
@@ -70,8 +70,12 @@ During 2016 to 2017, he works as a researcher at the <A HREF="http://lsi.epfl.ch
 </UL>	
 <HR>
 	
-<h2> <a name="publications">Publications <a href="https://scholar.google.com/citations?hl=en&user=0spez40AAAAJ&view_op=list_works&gmla=AJsN-F7L0_K-NorY6eoZe8Pw5s7fVCiAq78gP2ooH9ToyokXmHtZMdOpLqZcA1SdxYMErXBK7c3ojrJANocYOruEoCCtFhL_X66ox6BQu7pD55qOLBSKisIgW6UyODbwLeEAWXk-sFtfYo8WCNcAkyazMLZ_JKn6yQ"> [Google Scholar]</a> <a href="http://dblp.uni-trier.de/pers/hd/c/Chu:Zhufei"> [DBLP] </a></a> </h2>
-<a href="https://orcid.org/0000-0001-5718-4822" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0001-5718-4822</a>
+<h2> <a name="publications">Publications <a href="https://scholar.google.com/citations?hl=en&user=0spez40AAAAJ&view_op=list_works&gmla=AJsN-F7L0_K-NorY6eoZe8Pw5s7fVCiAq78gP2ooH9ToyokXmHtZMdOpLqZcA1SdxYMErXBK7c3ojrJANocYOruEoCCtFhL_X66ox6BQu7pD55qOLBSKisIgW6UyODbwLeEAWXk-sFtfYo8WCNcAkyazMLZ_JKn6yQ"> [Google Scholar]</a> <a href="http://dblp.uni-trier.de/pers/hd/c/Chu:Zhufei"> [DBLP] 
+<a href="https://orcid.org/0000-0001-5718-4822" target="orcid.widget" rel="noopener noreferrer"
+  style="vertical-align:top;"><img
+  src="https://orcid.org/sites/default/files/images/orcid_16x16.png"
+style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
+    </a></a> </h2>
 <p>
 <OL>
 <h3> 2018 </h3>
