--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
     Circuit Technology</i>, Oct. 2018, Qingdao, Shandong, China.
 </li>
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Mathias Soeken, Yinshui
+  Xia and Lunyao Wang, "Structural Rewriting in XOR-Majority Graphs </a>",
+  <strong>IWLS' 18</strong>, <i>International Wokrshop on Logic & Synthesis</i>, June 2018, San
+  Francisco, CA, USA.
+</li>
+<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Mathias Soeken, Yinshui
   Xia and  Giovanni De Micheli, "<A
     HREF="http://ieeexplore.ieee.org/document/8297400/">Functional Decomposition
     Using Majority</a>",
