--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Mathias Soeken, Yinshui
   Xia, Lunyao Wang and Giovanni De Micheli, "Structural Rewriting in XOR-Majority Graphs </a>",
   <strong>ASPDAC' 19</strong>, <i>Asia and South Pacific Design Automation
-    Conference</i>, Jan 2019, Tokyo, Japan.
+    Conference</i>, Jan 2019, Tokyo, Japan, accepted for publication.
 </li>
 
 <h3> 2018 </h3>
 <li>Zeqiang Li, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui
   Xia and  Lunyao Wang, "Efficient Design of Decimal Full Adder Using Quantum-dot Cellular Automata </a>",
   <strong>ICSICT' 18</strong>, <i>The 14th International Conference on Solid-State and Integrated
-    Circuit Technology</i>, Oct. 2018, Qingdao, Shandong, China.
+    Circuit Technology</i>, Oct. 2018, Qingdao, Shandong, China, accepted for publication.
 </li>
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Mathias Soeken, Yinshui
   Xia and Lunyao Wang, "Structural Rewriting in XOR-Majority Graphs </a>",
