--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <p>
 <OL>
 <h3> 2019 </h3>
+<li>Lei Shi, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,  "Inversions Optimization in
+  XOR-Majority Graphs with an Application to QCA</a>",
+  <strong>CSTIC' 19</strong>, <i> China Semiconductor Technology International Conference</i>, Mar
+  2019, Shanghai, China, accepted for publication.
+</li>
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Mathias Soeken, Yinshui
   Xia, Lunyao Wang and Giovanni De Micheli, "Structural Rewriting in XOR-Majority Graphs </a>",
   <strong>ASPDAC' 19</strong>, <i>Asia and South Pacific Design Automation
