--- a/index.html
+++ b/index.html
@@ -91,10 +91,18 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 </li>
 
 <h3> 2018 </h3>
-<li>Zeqiang Li, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui
-  Xia and  Lunyao Wang, "Efficient Design of Decimal Full Adder Using Quantum-dot Cellular Automata </a>",
+<li>Qi Yu, Lunyao Wang, <A HREF="https://zfchu.github.io/">Zhufei
+    Chu</a>, and Yinshui Xia , "<A
+    HREF="https://ieeexplore.ieee.org/abstract/document/8565775">
+    Approximate Computing for 4-bit Adder Design
+  </a>",
   <strong>ICSICT' 18</strong>, <i>The 14th International Conference on Solid-State and Integrated
-    Circuit Technology</i>, Oct. 2018, Qingdao, Shandong, China, accepted for publication.
+    Circuit Technology</i>, Oct. 2018, Qingdao, Shandong, China.
+</li>
+<li>Zeqiang Li, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui
+  Xia and  Lunyao Wang, "<A HREF="https://ieeexplore.ieee.org/abstract/document/8565642">Efficient Design of Decimal Full Adder Using Quantum-dot Cellular Automata </a>",
+  <strong>ICSICT' 18</strong>, <i>The 14th International Conference on Solid-State and Integrated
+    Circuit Technology</i>, Oct. 2018, Qingdao, Shandong, China.
 </li>
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Mathias Soeken, Yinshui
   Xia and Lunyao Wang, "Structural Rewriting in XOR-Majority Graphs </a>",
