--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <p>
 <OL>
 <h3> 2019 </h3>
+<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Winston Haaswijk, Mathias Soeken, Lunyao Wang, Yinshui Xia, and Giovanni De Micheli  "Exact Synthesis of Boolean Functions in Majority-of-five Forms</a>",
+  <strong>ISCAS' 19</strong>, <i> IEEE International Symposium on Circuits and Systems</i>, May
+  2019, Sapporo, Japan, accepted for publication.
+</li>
 <li>Lei Shi, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,  "Inversions Optimization in
   XOR-Majority Graphs with an Application to QCA</a>",
   <strong>CSTIC' 19</strong>, <i> China Semiconductor Technology International Conference</i>, Mar
