--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
   2019, Shanghai, China, accepted for publication.
 </li>
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Mathias Soeken, Yinshui
-  Xia, Lunyao Wang and Giovanni De Micheli, "Structural Rewriting in XOR-Majority Graphs </a>",
+  Xia, Lunyao Wang and Giovanni De Micheli, "<A HREF="https://dl.acm.org/citation.cfm?id=3287671">Structural Rewriting in XOR-Majority Graphs </a>",
   <strong>ASPDAC' 19</strong>, <i>Asia and South Pacific Design Automation
-    Conference</i>, Jan 2019, Tokyo, Japan, accepted for publication.
+    Conference</i>, Jan 2019, Tokyo, Japan.	
 </li>
 
 <h3> 2018 </h3>
