--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <p>
 <OL>
 <h3> 2019 </h3>
+<li>Libo Qian, Kefang Qian, Xitao He, <A
+    HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yidie Ye, Ge
+  Shi, and Yinshui Xia "Through Silicon Via based Capacitor and Its Application in
+LDO Regulator Design</a>", <i> IEEE Transactions on Very Large Scale Integration Systems</i>, accepted for publication.
+</li>
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Winston Haaswijk, Mathias Soeken, Lunyao Wang, Yinshui Xia, and Giovanni De Micheli  "Exact Synthesis of Boolean Functions in Majority-of-five Forms</a>",
   <strong>ISCAS' 19</strong>, <i> IEEE International Symposium on Circuits and Systems</i>, May
   2019, Sapporo, Japan, accepted for publication.
