--- a/index.html
+++ b/index.html
@@ -81,10 +81,12 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <h3> 2019 </h3>
 <li>Libo Qian, Kefang Qian, Xitao He, <A
     HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yidie Ye, Ge
-  Shi, and Yinshui Xia "Through Silicon Via based Capacitor and Its Application in
+  Shi, and Yinshui Xia, "<A HREF="https://ieeexplore.ieee.org/document/8677263">Through Silicon Via based Capacitor and Its Application in
 LDO Regulator Design</a>", <i> IEEE Transactions on Very Large Scale Integration Systems</i>, accepted for publication.
 </li>
-<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Winston Haaswijk, Mathias Soeken, Lunyao Wang, Yinshui Xia, and Giovanni De Micheli  "Exact Synthesis of Boolean Functions in Majority-of-five Forms</a>",
+<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Winston
+  Haaswijk, Mathias Soeken, Lunyao Wang, Yinshui Xia, and Giovanni
+  De Micheli,  "<A HREF="https://ieeexplore.ieee.org/document/8702141">Exact Synthesis of Boolean Functions in Majority-of-five Forms</a>",
   <strong>ISCAS' 19</strong>, <i> IEEE International Symposium on Circuits and Systems</i>, May
   2019, Sapporo, Japan, accepted for publication.
 </li>
