--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <p>
 <OL>
 <h3> 2019 </h3>
+<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Mathias Soeken, Yinshui Xia, Lunyao Wang, and Giovanni De Micheli, "Advanced Functional Decomposition Using Majority and Its
+Applications</a>", <i> IEEE Transactions on Computer-Aided Design
+of Integrated Circuits and Systems (TCAD)</i>, accepted for publication.
+</li>
 <li>Libo Qian, Kefang Qian, Xitao He, <A
     HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yidie Ye, Ge
   Shi, and Yinshui Xia, "<A HREF="https://ieeexplore.ieee.org/document/8677263">Through Silicon Via based Capacitor and Its Application in
