--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 <h2> <a name="news">Recent News</a> </h2>
 
 <UL>
+  <li> June 2019, Invited to served as TPC member of <A
+                                                          HREF="https://embeddedandvlsidesignconference.org/">VLSID'20</a>.</li>
+  <li> Feb. 2019, Invited to served as Proceedings Chair of <A
+                                                          HREF="http://www.iwls.org/iwls2019/">IWLS'19</a>.</li>
   <li> 12/12/2017, Dr. Chu has been appointed as Associate Professor at Ningbo University. </li>
 	<li> 11/09/2017, Paper "Functional Decomposition using Majority" has been
     accepted by publication by ASPDAC' 18</li>
