--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <td width=600>
 <h2>Zhufei Chu, Associate Professor, Ningbo Univ.</h2>
 <h4>
+[<a href="#tools">Tools</a>]
 [<a href="#news">Recent News</a>]
 [<a href="#about">About me</a>]
 [<a href="#publications">Publications</a>]
@@ -43,6 +44,11 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 </table>
 
 <HR>
+<h2> <a name="tools">Tools</a> 
+</h2><img border="0" src="images/hammer.jpg" height="40"><a
+  href="https://github.com/nbulsi/also"><font
+    color="#FF0000">  ALSO : Advanced Logic Synthesis and
+    Optimization tool</font> is now available. <a>
 
 <h2> <a name="news">Recent News</a> </h2>
 
