--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 <h2> <a name="tools">Tools</a> 
 </h2><a
   href="https://github.com/nbulsi/also"><font
-    color="#FF0000">  ALSO : Advanced Logic Synthesis and
-    Optimization tool</font> is now available. <a>
+  color="#FF0000">  ALSO </font> : Advanced Logic Synthesis and
+    Optimization tool<a>
 
 <h2> <a name="news">Recent News</a> </h2>
 
 <UL>
   <li> June 2019, Invited to served as TPC member of <A
                                                           HREF="https://embeddedandvlsidesignconference.org/">VLSID'20</a>.</li>
-  <li> Feb. 2019, Invited to served as Proceedings Chair <A HREF="http://www.iwls.org/iwls2019/">
-      and Session Chair of IWLS'19</a>.</li>
+  <li> Feb. 2019, Invited to served as Proceedings Chair and
+    Session Chair of <A HREF="http://www.iwls.org/iwls2019/"> IWLS'19</a>. </li>
   <li> 12/12/2017, Dr. Chu has been appointed as Associate Professor at Ningbo University. </li>
 	<li> 11/09/2017, Paper "Functional Decomposition using Majority" has been
     accepted by publication by ASPDAC' 18</li>
