tcad early access

--- a/index.html
+++ b/index.html
@@ -89,9 +89,12 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <p>
 <OL>
 <h3> 2019 </h3>
-<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Mathias Soeken, Yinshui Xia, Lunyao Wang, and Giovanni De Micheli, "Advanced Functional Decomposition Using Majority and Its
+<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Mathias
+  Soeken, Yinshui Xia, Lunyao Wang, and Giovanni De Micheli, "<A
+    HREF="https://ieeexplore.ieee.org/document/8747480">Advanced Functional Decomposition Using Majority and Its
 Applications</a>", <i> IEEE Transactions on Computer-Aided Design
-of Integrated Circuits and Systems (TCAD)</i>, accepted for publication.
+of Integrated Circuits and Systems (<strong>TCAD</strong>)</i>, accepted for
+publication, Early Access.
 </li>
 <li>Libo Qian, Kefang Qian, Xitao He, <A
     HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yidie Ye, Ge
