--- a/index.html
+++ b/index.html
@@ -107,10 +107,11 @@ LDO Regulator Design</a>", <i> IEEE Transactions on Very Large Scale Integration
   <strong>ISCAS' 19</strong>, <i> IEEE International Symposium on Circuits and Systems</i>, May
   2019, Sapporo, Japan, accepted for publication.
 </li>
-<li>Lei Shi, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,  "Inversions Optimization in
+<li>Lei Shi, and <A HREF="https://zfchu.github.io/">Zhufei
+    Chu</a>,  "<A HREF="https://ieeexplore.ieee.org/document/8755713">Inversions Optimization in
   XOR-Majority Graphs with an Application to QCA</a>",
   <strong>CSTIC' 19</strong>, <i> China Semiconductor Technology International Conference</i>, Mar
-  2019, Shanghai, China, accepted for publication.
+  2019, Shanghai, China.
 </li>
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Mathias Soeken, Yinshui
   Xia, Lunyao Wang and Giovanni De Micheli, "<A HREF="https://dl.acm.org/citation.cfm?id=3287671">Structural Rewriting in XOR-Majority Graphs </a>",
