--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <p>
 <OL>
 <h3> 2019 </h3>
+<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Lei Shi, Lunyao Wang, and Yinshui Xia, "Multi-Objective Algebraic
+       Rewriting in XOR-Majority Graphs</a>", <i> Integration, the VLSI Journal</i>, accepted for publication.
+</li>
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Mathias
   Soeken, Yinshui Xia, Lunyao Wang, and Giovanni De Micheli, "<A
     HREF="https://ieeexplore.ieee.org/document/8747480">Advanced Functional Decomposition Using Majority and Its
@@ -99,7 +102,8 @@ publication, Early Access.
 <li>Libo Qian, Kefang Qian, Xitao He, <A
     HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yidie Ye, Ge
   Shi, and Yinshui Xia, "<A HREF="https://ieeexplore.ieee.org/document/8677263">Through Silicon Via based Capacitor and Its Application in
-LDO Regulator Design</a>", <i> IEEE Transactions on Very Large Scale Integration Systems</i>, accepted for publication.
+LDO Regulator Design</a>", <i> IEEE Transactions on Very Large
+Scale Integration Systems (<strong>TVLSI</strong>)</i>, accepted for publication.
 </li>
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Winston
   Haaswijk, Mathias Soeken, Lunyao Wang, Yinshui Xia, and Giovanni
