--- a/index.html
+++ b/index.html
@@ -89,8 +89,10 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <p>
 <OL>
 <h3> 2019 </h3>
-<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Lei Shi, Lunyao Wang, and Yinshui Xia, "Multi-Objective Algebraic
-       Rewriting in XOR-Majority Graphs</a>", <i> Integration, the VLSI Journal</i>, accepted for publication.
+<li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Lei Shi,
+  Lunyao Wang, and Yinshui Xia, "<A HREF="https://www.sciencedirect.com/science/article/pii/S0167926019301932"> Multi-Objective Algebraic
+       Rewriting in XOR-Majority Graphs</a>", <i> Integration, the
+       VLSI Journal</i>, Early Access.
 </li>
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Mathias
   Soeken, Yinshui Xia, Lunyao Wang, and Giovanni De Micheli, "<A
@@ -103,7 +105,8 @@ publication, Early Access.
     HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yidie Ye, Ge
   Shi, and Yinshui Xia, "<A HREF="https://ieeexplore.ieee.org/document/8677263">Through Silicon Via based Capacitor and Its Application in
 LDO Regulator Design</a>", <i> IEEE Transactions on Very Large
-Scale Integration Systems (<strong>TVLSI</strong>)</i>, accepted for publication.
+Scale Integration Systems (<strong>TVLSI</strong>)</i>,
+27(8):1947-1951, 2019.
 </li>
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Winston
   Haaswijk, Mathias Soeken, Lunyao Wang, Yinshui Xia, and Giovanni
