--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Lei Shi,
   Lunyao Wang, and Yinshui Xia, "<A HREF="https://www.sciencedirect.com/science/article/pii/S0167926019301932"> Multi-Objective Algebraic
        Rewriting in XOR-Majority Graphs</a>", <i> Integration, the
-       VLSI Journal</i>, Early Access.
+       VLSI Journal</i>, 69:40-49, Sep. 2019.
 </li>
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Mathias
   Soeken, Yinshui Xia, Lunyao Wang, and Giovanni De Micheli, "<A
