--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 <h2> <a name="news">Recent News</a> </h2>
 
 <UL>
+  <li> Jan. 2020, Invited to served as Proceedings Chair of <A
+      HREF="http://www.iwls.org/iwls2020/"> IWLS'20</a>. </li>
   <li> June 2019, Invited to served as TPC member of <A
                                                           HREF="https://embeddedandvlsidesignconference.org/">VLSID'20</a>.</li>
   <li> Feb. 2019, Invited to served as Proceedings Chair and
@@ -88,6 +90,25 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
     </a></a> </h2>
 <p>
 <OL>
+  <h3> 2020 </h3>
+  <li>Lin Chen, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
+"Towards Optimal Logic Representations for Implication-based
+Memristive Circuit", <strong>CSTIC' 20</strong>, <i> China Semiconductor Technology International Conference</i>, Mar
+2020, Shanghai, China. </li>
+
+
+  <li>Huiming Tian, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
+"A Novel Cellular Array Design Using Quantum-dot Cellular
+Automata",
+<strong>CSTIC' 20</strong>, <i> China Semiconductor Technology International Conference</i>, Mar
+2020, Shanghai, China. </li>
+  
+<li>Zeqi Chen, Jianping Hu, Hao Ye, and <A
+  HREF="https://zfchu.github.io/">Zhufei Chu</a>, "<A
+    HREF="https://www.mdpi.com/2072-666X/11/1/64">T-Channel
+    Field Effect Transistor with Three Input Terminals
+    (Ti-TcFET)</a>". Micromachines. Jan. 2020, 11(1):64. </li>
+
 <h3> 2019 </h3>
 <li><A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Lei Shi,
   Lunyao Wang, and Yinshui Xia, "<A HREF="https://www.sciencedirect.com/science/article/pii/S0167926019301932"> Multi-Objective Algebraic
