--- a/index.html
+++ b/index.html
@@ -139,6 +139,11 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
   <strong>ASPDAC' 19</strong>, <i>Asia and South Pacific Design Automation
     Conference</i>, Jan 2019, Tokyo, Japan.	
 </li>
+<li>Qiuhong Ying, Lunyao Wang, <A
+    HREF="https://zfchu.github.io/">Zhufei Chu</a>, and Yinshui Xia, "<A HREF="https://ieeexplore.ieee.org/abstract/document/8983435">Area Optimization of MPRM Circuits Using Approximate Computing</a>",
+  <strong>ASICON' 19</strong>, <i>International Conference on
+    ASIC</i>, Oct 2019, Chongqing, China.	
+</li>
 
 <h3> 2018 </h3>
 <li>Qi Yu, Lunyao Wang, <A HREF="https://zfchu.github.io/">Zhufei
