--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 <h2> <a name="news">Recent News</a> </h2>
 
 <UL>
+  <li> Feb. 2020, Invited to served as TPC member of <A
+      HREF="https://coinsconf.com/"> COINS'20</a>. </li>
   <li> Jan. 2020, Invited to served as Proceedings Chair of <A
       HREF="http://www.iwls.org/iwls2020/"> IWLS'20</a>. </li>
   <li> June 2019, Invited to served as TPC member of <A
